[project]
name = "xanax"
version = "0.3.1"
description = "A clean, type-safe Python client for multi-source media APIs (Wallhaven, Unsplash, Reddit)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "xanax" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/violhex/xanax"
Documentation = "https://xanax.readthedocs.io"
Repository = "https://github.com/violhex/xanax"
Changelog = "https://xanax.readthedocs.io/en/latest/changelog/"
"Bug Tracker" = "https://github.com/violhex/xanax/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "myst-parser>=3.0",
    "sphinx-autodoc-typehints>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xanax"]
include = ["xanax/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
